[package]
name = "librustee"
version = "0.0.1"
edition = "2024"

[dependencies]
backtrace = "0.3.75"
capstone = "0.13.0"
colored = "3.0.0"
cranelift-codegen = "0.122.0"
cranelift-frontend = "0.122.0"
cranelift-jit = "0.122.0"
cranelift-module = "0.122.0"
cranelift-native = "0.122.0"
cranelift-object = "0.122.0"
goblin = "0.10.0"
libc = "0.2.174"
lru = "0.16.3"
mipsasm = { path = "../external/mipsasm" }
nix = { version = "0.30.0", features = ["signal", "mman", "feature"] }
region = "3.0.2"
target-lexicon = "0.13.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
once_cell = "1.21.3"
regex = "1.11.1"
portable-atomic = "1.11.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_System_Kernel", "Win32_System_SystemInformation", "Win32_Security"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.0", features = ["signal", "mman", "fs"] }

[dev-dependencies]
criterion = "0.5.1"
