[package]
name = "librustee"
version = "0.0.1"
edition = "2024"

[dependencies]
backtrace = "0.3.76"
capstone = "0.14.0"
colored = "3.1.1"
cranelift-codegen = "0.128.3"
cranelift-frontend = "0.128.3"
cranelift-jit = "0.128.3"
cranelift-module = "0.128.3"
cranelift-native = "0.128.3"
cranelift-object = "0.128.3"
goblin = "0.10.4"
libc = "0.2.180"
lru = "0.16.3"
mipsasm = { path = "../external/mipsasm" }
nix = { version = "0.31.1", features = ["signal", "mman", "feature"] }
region = "3.0.2"
target-lexicon = "0.13.4"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
once_cell = "1.21.3"
regex = "1.12.3"
portable-atomic = "1.13.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_Kernel", "Win32_System_SystemInformation", "Win32_Security"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31.1", features = ["signal", "mman", "fs"] }

[dev-dependencies]
criterion = "0.8.2"
