[package]
name = "rustee"
version = "0.0.1"
edition = "2024"

[dependencies]
capstone = "0.13.0"
clap = "4.5.36"
egui = "0.31.1"
egui-wgpu = "0.31.1"
egui-winit = "0.31.1"
egui_extras = "0.31.1"
image = "0.25.6"
librustee = { path = "../librustee" }
pollster = "0.4.0"
portable-atomic = "1.11.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
wgpu = "25.0.2"
winit = "0.30.11"
